src/objects/CourseList__c.object
<CustomObject>
    <description>temporary object for CM-student assignment project, should have only 1 record which shows the course we want</description>
    <fields>
        <fullName>CourseLong__c</fullName>
        <description>A long list of courses, maximum of 32768 charactors.</description>
        <label>CourseLong</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <description>courses which we want CM-Students will run on. in the form of  &apos;XXX1&apos;,&apos;XXX2&apos;,&apos;XXX3&apos;</description>
        <label>Course</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>which project is this record for.</description>
        <label>Project</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>CourseList</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CourseList Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CourseLists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>